@@ -1,3 +1,10 @@
+2001-06-05  Dave Peticolas  <dave@krondo.com>
+
+	* src/gnome/dialog-fincalc.c: grey out the frequency menu
+	when compounding is continuous.
+
+	* src/engine/sql/Makefile.am: add checkpoint.h
+
 2001-06-05  Christian Stimming  <stimming@tuhh.de>
 
 	* src/scm/report/category-barchart.scm, average-balance.scm,
